--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,1 +1,11 @@
+.jumbotron {
+  background-image: url("../giphy.gif");
+  background-position: center;
+  background-size: cover;
+  height: 400px;
+}
 
+#about-text{
+  margin-left: 40px;
+  text-decoration: underline;
+}
